--- a/APP_PANEL/templates/APP_PANEL/article_list.html
+++ b/APP_PANEL/templates/APP_PANEL/article_list.html
@@ -9,7 +9,7 @@
 {% for articulo in object_list %}
 <div class="articulo">{{articulo.title}} <div class="contenido1">{{articulo.content | safe}}</div> 
 <img src="{{articulo.image}}" alt="">
-
+text
 </div>
 {% endfor %}
 </div>
