cambios graficos generales

--- a/APP_PANEL/templates/APP_PANEL/article_form.html
+++ b/APP_PANEL/templates/APP_PANEL/article_form.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 
-<div class="form-group">
+<div class="textFieldEdition">
   
   <form class="loginform" method="POST">
     <h1>Crear nueva historia</h1>
