--- a/APP/static/APP/css/stye.css
+++ b/APP/static/APP/css/stye.css
@@ -78,11 +78,6 @@ label[for="id_date_published"]:after{
     content:'Fecha: ';
 }
 
-footer{
-    position: absolute;
-    width: 100%;
-    bottom: -500px;
-}
 .carousel{
     margin-top: 85px;
 }
@@ -168,18 +163,14 @@ p img {
     height: 140px!important;
 }
 
-.form-group{
+.textFieldEdition{
     display: flex;
     flex-direction: column;
-    margin-top: 50px!important;
     background-color: rgb(244, 215, 215);
-    width: 100%;
-    height: 100vh;
-    justify-content: center;
     
 }
 .loginform{
-    margin-top: 300px;
+    margin-top: 80px;
     width: 700px;
     padding: 20px;
 }
@@ -246,28 +237,41 @@ p img {
 .publicaciones{
     display: flex;
     width: 800px;
+    height: 100vh;
     justify-content: space-between;
     flex-wrap: wrap;
     max-width: 800px;
     flex-direction: row;
     margin-top: 38px;
-    padding-top: 40px ;
+    padding-top: 80px ;
     background-color: white;
     margin-right: auto;
     margin-left: auto;
 
 }
+.btn-secondary{
+    background-color: rgb(255, 202, 202)!important;
+}
+.btn{
+    color: black;
+}
 .contenedorPublicaciones{
     margin-left: 30px;
+    margin-right: 30px;
 }
 
 .contenido{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 500px;
+    background-color: #343a40;
+    border-radius: 10px;
     height: 400px;
     margin-top: 150px!important;
     margin: 0 auto;
+    margin-bottom: 300px;
 }
 .contenido h1{
     text-align: center;
@@ -278,10 +282,15 @@ p img {
 .botoningresar{
     display: flex;
     justify-content: center;
+    margin-top: 10px!important;
     margin: 0 auto;
 }
-
-
+.ingresarh1{
+    color: white;
+}
+label{
+    color: #6c757d;
+}
 @media screen and (max-width: 750px) {
     .boton{
         align-self:center!important;
