--- a/APP_PANEL/templates/APP_PANEL/panel_login.html
+++ b/APP_PANEL/templates/APP_PANEL/panel_login.html
@@ -1,23 +1,16 @@
 {% extends "APP/padre.html" %}
 {% load static %}
 {% block Contenido %}
-
-
    <div class="contenido">
       <img class="" src="{% static 'APP/css/ayudaanimal.png' %}"  alt="" width="120" height="100">
-      <h1 class="">Ingresar Usuario</h1>
+      <h1 class="ingresarh1">Ingresar Usuario</h1>
     
   <div class="form2">
 
     <form action="" method="POST">{% csrf_token %}
-    
         <ul>
-
             <table>
-        
-              {{form}}
-        
-            
+              {{form.as_table}}
             </table>
               <button class="btn btn-primary botoningresar" type="submit">Entrar</button>
         </ul>
