Creacion de adopcion en logout

--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -30,7 +30,7 @@
                 <a class="nav-link active" aria-current="page" href="{%url 'raiz'%}">Inicio</a>
               </li>
               <li>
-                <a class="nav-link" href="{%url 'panel-page'%}">Adopcion</a>
+                <a class="nav-link" href="{%url 'adopcion'%}">Adopcion</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href= "{%url 'donaciones'%}">Donaciones</a>
