--- a/APP/static/APP/css/stye.css
+++ b/APP/static/APP/css/stye.css
@@ -128,6 +128,23 @@ label[for="id_date_published"]:after{
     border: none;
 
 }
+.boton5{
+    font-family: Helvetica!important    ;
+    font-weight: bolder;
+    color: black;
+    height: 40px;
+    align-items: center;
+    width: 150px;
+    font-family: DM Sans;
+    border-radius: 5px;
+    background: rgb(244, 215, 215);
+    border: none;
+
+}
+.boton5:hover{
+    background-color: #424740;
+    transition: 0.4s;
+}
 .boton:hover,.boton1:hover,.boton2:hover{
     color: rgb(78, 78, 78);
 }
@@ -249,6 +266,25 @@ p img {
     margin-left: auto;
 
 }
+.adoptalos{
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    top: 60%;
+    width: 500px;
+    display: flex;
+    flex-direction: column!important;
+    justify-content: center;
+    border: 1px solid ;
+    border-radius: 5px;
+    margin-left: 120px;
+    border-color: black;
+    padding: 20px;
+}
+.h1flotante{
+    color: white;
+    font-weight: bold;
+}
 .btn-secondary{
     background-color: rgb(255, 202, 202)!important;
 }
@@ -298,4 +334,26 @@ label{
 
     }
     
+}
+
+#row {
+    opacity: 0;
+    -webkit-transform: translateX(-40px);
+         -moz-transform: translateX(-40px);
+            -ms-transform: translateX(-40px);
+             -o-transform: translateX(-40px);
+                    transform: translateX(-40px);
+    -webkit-transition: all 0.6s ease-out;
+         -moz-transition: all 0.6s ease-out;
+            -ms-transition: all 0.6s ease-out;
+             -o-transition: all 0.6s ease-out;
+                    transition: all 0.6s ease-out;
+}
+#row.visible {
+    opacity: 1;
+    -webkit-transform: none;
+         -moz-transform: none;
+            -ms-transform: none;
+             -o-transform: none;
+                    transform: none;
 }
