--- a/APP/static/APP/css/stye.css
+++ b/APP/static/APP/css/stye.css
@@ -124,7 +124,7 @@ label[for="id_date_published"]:after{
     width: 150px;
     font-family: DM Sans;
     border-radius: 5px;
-    background: rgb(244, 215, 215);
+    background-color: rgb(255, 202, 202);
     border: none;
 
 }
@@ -137,7 +137,7 @@ label[for="id_date_published"]:after{
     width: 150px;
     font-family: DM Sans;
     border-radius: 5px;
-    background: rgb(244, 215, 215);
+    background-color: rgb(255, 202, 202);
     border: none;
 
 }
@@ -160,17 +160,15 @@ label[for="id_date_published"]:after{
     font-family: Helvetica!important;
     justify-content: center;
     font-weight: bolder;
-    position: absolute;
-    top: 25px;
-    right: 10px;
     height: 40px;
+    margin-left: 20px;
     text-decoration: none!important;
     color: black;
     align-items: center;
     width: 140px;
     font-family: DM Sans;
     border-radius: 5px;
-    background: rgb(244, 215, 215);
+    background-color: rgb(255, 202, 202);
     border: none;
 
 }
@@ -213,11 +211,11 @@ p img {
     display: flex;
     justify-content: center;
     font-family: Helvetica!important;
-    position: absolute;
+
     text-align: center;
     font-weight: bolder;
-    top: 25px;
-    right: 200px;
+
+
     height: 40px;
     align-items: center;
     text-decoration: none!important;
@@ -225,9 +223,15 @@ p img {
     width: 140px;
     font-family: DM Sans;
     border-radius: 5px;
-    background: rgb(244, 215, 215);
+    background-color: rgb(255, 202, 202);
     border: none;
 
+}
+.cerrar{
+    display: flex;
+    position: absolute;
+    right: 10px;
+    margin-left: 10px;
 }
 
 .boton1 img{
@@ -253,11 +257,8 @@ p img {
 }
 .publicaciones{
     display: flex;
-    width: 800px;
-    height: 100vh;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 800px;
     flex-direction: row;
     margin-top: 38px;
     padding-top: 80px ;
@@ -265,6 +266,9 @@ p img {
     margin-right: auto;
     margin-left: auto;
 
+}
+.imgPublicacion{
+    float: left;
 }
 .adoptalos{
     display: flex;
@@ -293,6 +297,11 @@ p img {
 }
 .contenedorPublicaciones{
     margin-left: 30px;
+    background-color: #f2f2f2;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+    padding: 60px;
+    margin-top: 50px;
+    border-radius: 8px;
     margin-right: 30px;
 }
 
@@ -329,9 +338,30 @@ label{
 }
 @media screen and (max-width: 750px) {
     .boton{
-        align-self:center!important;
-        top: 180px;
-
+        margin: 0 auto;
+        position: inherit;
+    }
+    .cerrar{
+        margin: 0 auto;
+        position: inherit;
+    }
+    .adoptalos{
+        margin: 0 auto;
+        display: flex;
+        width: 100%;
+    }
+    .boton5{
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    .contenedorPublicaciones{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
     }
     
 }
