--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -38,16 +38,18 @@
               <li class="nav-item">
                 <a class="nav-link" href= "{%url 'contactenos'%}">Contactenos</a>
               </li>
+              {% if request.user.is_authenticated %}
+              <div class="nav-item cerrar">              <a class="boton2" href="{%url 'article-create'%}">Edición<img class="botonimg2" src="{% static 'APP/css/hocico.png' %}" alt="" width="30px"></a>
+
+                <a class="boton1" href="{%url 'panel-logout'%}">Cerrar sesión <img class="botonimg1" src="{% static 'APP/css/hueso1.png' %}" alt="" width="40px"></a></div>
+              {%endif%}
               
               {% if not request.user.is_authenticated %}
-              <a class="boton" href="{% url 'panel-login' %}">Iniciar sesion <img class="botonimg"src="{% static 'APP/css/pataboton.png' %}" alt="" width="40px"></a>
+
+              <a class="nav-item boton" href="{% url 'panel-login' %}">Iniciar sesion <img class="botonimg"src="{% static 'APP/css/pataboton.png' %}" alt="" width="40px"></a>
               {%endif%}
 
-              {% if request.user.is_authenticated %}
-              <a class="boton2" href="{%url 'article-create'%}">Edición<img class="botonimg2" src="{% static 'APP/css/hocico.png' %}" alt="" width="30px"></a>
-
-              <a class="boton1" href="{%url 'panel-logout'%}">Cerrar sesión <img class="botonimg1" src="{% static 'APP/css/hueso1.png' %}" alt="" width="40px"></a>
-              {%endif%}
+              
             </ul>
   
           </div>
