--- a/APP/static/APP/css/stye.css
+++ b/APP/static/APP/css/stye.css
@@ -95,6 +95,9 @@ label[for="id_date_published"]:after{
     z-index: 23;
 
 }
+.crear{
+    padding-top: 20px;
+}
 .ultimo{
     display: flex;
     justify-content: space-between;
@@ -108,6 +111,9 @@ label[for="id_date_published"]:after{
 }
 .miimagen img{
     width: 25px;
+}
+.eliminar{
+    margin-top: 200px;
 }
 .boton{
     display: flex;
