--- a/APP/static/APP/css/stye.css
+++ b/APP/static/APP/css/stye.css
@@ -417,3 +417,91 @@ label{
              -o-transform: none;
                     transform: none;
 }
+
+
+
+/* 
+donaciones */
+
+
+
+
+.donaciones {
+    font-size: 1.25rem;
+    width: 185px;
+    background: royalblue;
+    color: white;
+    padding: 0.7em 1em;
+    padding-left: 0.9em;
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    border: none;
+    border-radius: 16px;
+    overflow: hidden;
+    transition: all 0.2s;
+  }
+  button span {
+    display: block;
+    margin-left: 0.3em;
+    transition: all 0.3s ease-in-out;
+  }
+  button i {
+    display: block;
+    transform-origin: center center;
+    transition: transform 0.3s ease-in-out;
+  }
+  button:hover .wrapper {
+    animation: fly 0.6s ease-in-out infinite alternate;
+  }
+  button:hover i {
+    transform: translateX(1.2em) rotate(45deg) scale(1.1);
+  }
+  button:hover span {
+    transform: translateX(7em);
+  }
+  button:active {
+    transform: scale(0.95);
+  }
+  @keyframes fly {
+    from {
+      transform: translateY(0.1em);
+    }
+    to {
+      transform: translateY(-0.1em);
+    }
+  }
+
+
+  .botonsend{
+    margin-top: 86px;
+    padding-top: 30px;
+  }
+  hr{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid #eee;
+  }
+  h3{
+    color: #384961;
+    font-size: 25px;
+    line-height: 1.2em;
+    margin-bottom: 0.4em;
+    word-wrap: break-word;
+    font-weight: 700;
+    text-align: left;
+  }
+  p{
+    font-size: 15px;
+    line-height: 1.8em;
+    word-wrap: break-word;
+    margin-bottom: 1.5em;
+  }
+  .mercadopago{
+    width: 300px;
+  }
+  .botones{
+    flex-direction: column;
+    padding-left: 50px;
+  }
