--- a/APP/templates/APP/Donaciones.html
+++ b/APP/templates/APP/Donaciones.html
@@ -2,6 +2,46 @@
 {% block Contenido %}
 {% load static %}
 
+<div class="container botonsend">
+    <hr>
+    <h3>Sumate! Tu colaboracion es de vital importancia para solventar cualquier contratiempo que surja</h3>
+    <p>Tu ayuda nos permite ofrecerle a nuestros animales todo lo que ellos necesitan hasta conseguirles un nuevo hogar</p>
+    <h3>Dona por Mercado Pago</h3>
+    <hr>
+    <img class="mercadopago" src="{%static 'APP/css/mercadopago2.webp' %}" width="500px" alt="" srcset="">
+    <div class="botones container d-flex justify-content-center">
+    <button class="donaciones">
+        <div class="wrapper">
+          <i class="bi bi-send"></i>
+        </div>
+        <span>Donar $100</span>
+      </button>
+      <button class="donaciones">
+        <div class="wrapper">
+          <i class="bi bi-send"></i>
+        </div>
+        <span>Donar $200</span>
+      </button>
+      <button class="donaciones">
+        <div class="wrapper">
+          <i class="bi bi-send"></i>
+        </div>
+        <span>Donar $500</span>
+      </button>
+      <button class="donaciones">
+        <div class="wrapper">
+          <i class="bi bi-send"></i>
+        </div>
+        <span>Donar $1000</span>
+      </button>
+      <button class="donaciones">
+        <div class="wrapper">
+          <i class="bi bi-send"></i>
+        </div>
+        <span>Donar $2000</span>
+      </button>
+</div>
+</div>
 
 
 
