--- a/APP_PANEL/templates/APP_PANEL/adoption.html
+++ b/APP_PANEL/templates/APP_PANEL/adoption.html
@@ -1,6 +1,17 @@
 {% extends "APP/padre.html" %}
 {% load static %}
 {% block Contenido %}
+<div class="container botonsend">
+  <hr>
+  <h1>Adopcion</h1>
+  <h3>Hola, en esta pestaña puedes conocer las historias de quienes estan esperando un nuevo hogar. </h3>
+  <p> Si deseas postularte para adoptar, toca en el boton "Completar formulario".
+    Evaluaremos  el formulario y nos estaremos comunicando. 
+  </p>
+  <hr>
+  <a class="btn btn-secondary" href="https://docs.google.com/forms/d/e/1FAIpQLSeRmzzjRyKCDyghAge_YuLXS4wYWRA-Vzp56GpoSdZ3jxpikQ/viewform">Completar Formulario >></a>
+</div>
+
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 <div class="filtro container">
