--- a/APP/templates/APP/Donaciones.html
+++ b/APP/templates/APP/Donaciones.html
@@ -9,7 +9,7 @@
     <p>Tu ayuda nos permite ofrecerle a nuestros animales todo lo que ellos necesitan hasta conseguirles un nuevo hogar</p>
     <h3>Dona por Mercado Pago</h3>
     <hr>
-    <img class="mercadopago" src="{%static 'APP/css/mercadopago2.webp' %}" width="500px" alt="" srcset="">
+    <img class="mercadopago" src="{%static 'APP/css/mercadop.png' %}" width="500px" alt="" srcset="">
     <div class="botones container d-flex justify-content-center">
         
        <a href=https://www.mercadopago.com.ar/payment-link/v1/redirect?preference-id=31749478-b57629ce-bcdc-4c5d-a160-ded4b39d3184&source=link> <button  class="donaciones">
