--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -89,9 +89,9 @@
             <p class="company text-muted">© 2022 Company, Inc</p>
         </div>
         <div class="miimagen">
-            <img class="" src="{% static 'APP/css/twitter.png' %}" alt="" >
-            <img class="" src="{% static 'APP/css/inst.png' %}" alt="" >
-            <img class="" src="{% static 'APP/css/face.png' %}" alt="" >
+            <a href=""><img class="" src="{% static 'APP/css/twitter.png' %}" alt="" ></a>
+            <a href=""><img class="" src="{% static 'APP/css/inst.png' %}" alt="" ></a>
+            <a href=""><img class="" src="{% static 'APP/css/face.png' %}" alt="" ></a>
         </div>
     </div>
     </footer>
@@ -101,7 +101,7 @@
 <script src="{% static 'APP/js/hover1.js' %}"></script>
 <script src="{% static 'APP/js/hover2.js' %}"></script>
 <script src="{% static 'APP/js/hover3.js' %}"></script>
-
+<script src="{% static 'APP/js/scrollEfects.js' %}"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
