--- a/APP/static/APP/css/stye.css
+++ b/APP/static/APP/css/stye.css
@@ -88,7 +88,7 @@ label[for="id_size"]:after{
     content:'Tamaño: ';
 }
 .carousel{
-    margin-top: 85px;
+    margin-top: -1px;
 }
 .imagenes{
     height: 700px;
@@ -300,6 +300,9 @@ p img {
 .imgPublicacion{
     float: left;
 }
+.imgPublicacion p img{
+    object-fit: cover;
+}
 .adoptalos{
     display: flex;
     flex-wrap: wrap;
@@ -366,6 +369,9 @@ p img {
 label{
     color: #6c757d;
 }
+.perro3, .perro1,.perro2{
+    object-fit: cover; 
+}
 @media screen and (max-width: 750px) {
     .boton{
         margin: 0 auto;
@@ -393,7 +399,21 @@ label{
         align-items: center;
         width: 100%;
     }
-    
+
+
+    .miformulario{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+
+    }
+    label{
+        align-self: flex-start;
+        flex-direction: column;
+    }
+    #id_size{
+        width: 80px;
+    }
 }
 
 #row {
@@ -496,7 +516,7 @@ donaciones */
 
 
   .botonsend{
-    margin-top: 86px;
+    margin-top: -1px;
     padding-top: 30px;
   }
   .container_{
@@ -535,3 +555,104 @@ donaciones */
     flex-direction: column;
     padding-left: 50px;
   }
+
+/* 
+PRELOADER */
+.centrado{
+  height: 100vh;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hidden{
+  overflow: hidden;
+}
+.hiddenbar{
+  display: none;
+}
+.lds-roller {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-roller div {
+    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+  }
+  .lds-roller div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background-color: rgb(255, 202, 202);
+    margin: -4px 0 0 -4px;
+  }
+  .lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+  }
+  .lds-roller div:nth-child(1):after {
+    top: 63px;
+    left: 63px;
+  }
+  .lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+  }
+  .lds-roller div:nth-child(2):after {
+    top: 68px;
+    left: 56px;
+  }
+  .lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+  }
+  .lds-roller div:nth-child(3):after {
+    top: 71px;
+    left: 48px;
+  }
+  .lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+  }
+  .lds-roller div:nth-child(4):after {
+    top: 72px;
+    left: 40px;
+  }
+  .lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+  }
+  .lds-roller div:nth-child(5):after {
+    top: 71px;
+    left: 32px;
+  }
+  .lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+  }
+  .lds-roller div:nth-child(6):after {
+    top: 68px;
+    left: 24px;
+  }
+  .lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+  }
+  .lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+  }
+  .lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+  }
+  .lds-roller div:nth-child(8):after {
+    top: 56px;
+    left: 12px;
+  }
+  @keyframes lds-roller {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
