--- a/APP/templates/APP/index.html
+++ b/APP/templates/APP/index.html
@@ -38,7 +38,7 @@
             <!-- Three columns of text below the carousel -->
             <div class="row" id="row">
               <div class="col-lg-4 circulos perro">
-                  <img class="bd-placeholder-img rounded-circle" src="{% static 'APP/css/perro.jpg' %}" alt="" width="140px" height="140px">
+                  <img class="bd-placeholder-img rounded-circle perro1" src="{% static 'APP/css/perro.jpg' %}" alt="" width="140px" height="140px">
         
                 <h2 class="fw-normal">Heading</h2>
                 <p>Some representative placeholder content for the three columns of text below the carousel.</p>
