--- a/APP_PANEL/templates/APP_PANEL/adoption.html
+++ b/APP_PANEL/templates/APP_PANEL/adoption.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 <div class="filtro container">
-  <form method="get">
+  <form class="miformulario" method="get">
     {{listing_filter.form}}
     <button class="btn btn-sm btn-primary" type="submit">Filtrar</button>
   </form>
