--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -28,19 +28,46 @@
     
 </head>
 <body class="hidden">
-  <div class="centrado" id="onload">
-  <div class="lds-roller">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+<div class="loader">
+  <div class="dog">
+     <div class="dog-body">
+        <div class="dog-tail">
+           <div class="dog-tail">
+              <div class="dog-tail">
+                 <div class="dog-tail">
+                    <div class="dog-tail">
+                       <div class="dog-tail">
+                          <div class="dog-tail">
+                             <div class="dog-tail"></div>
+                          </div>
+                       </div>
+                    </div>
+                 </div>
+              </div>
+           </div>
+        </div>
+     </div>
+     <div class="dog-torso"></div>
+     <div class="dog-head">
+        <div class="dog-ears">
+           <div class="dog-ear"></div>
+           <div class="dog-ear"></div>
+        </div>
+        <div class="dog-eyes">
+           <div class="dog-eye"></div>
+           <div class="dog-eye"></div>
+        </div>
+        <div class="dog-muzzle">
+           <div class="dog-tongue"></div>
+        </div>
+     </div>
   </div>
+  <div class="texto">
+  <p class="pcontenedor">Cargando...</p>
 </div>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark barra hiddenbar">
+</div>
+
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
           <img class="navbar-brand" src="{% static 'APP/css/ayudaanimal.png' %}" alt="" srcset="" width="70" height="70">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +75,8 @@
           </button>
 
           
-          <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="collapse navbar-collapse mimenu" id="navbarCollapse">
+            <div>
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{%url 'raiz'%}">Inicio</a>
@@ -62,17 +90,17 @@
               <li class="nav-item">
                 <a class="nav-link" href= "{%url 'contactenos'%}">Contactenos</a>
               </li>
+            </div>
+            <div class="paneles">
               {% if request.user.is_authenticated %}
-              <div class="nav-item cerrar">              <a class="boton2" href="{%url 'adopcion'%}">Edición<img class="botonimg2" src="{% static 'APP/css/hocico.png' %}" alt="" width="30px"></a>
-
+              <div class="nav-item cerrar"><a class="boton2" href="{%url 'adopcion'%}">Edición<img class="botonimg2" src="{% static 'APP/css/hocico.png' %}" alt="" width="30px"></a>
                 <a class="boton1" href="{%url 'panel-logout'%}">Cerrar sesión <img class="botonimg1" src="{% static 'APP/css/hueso1.png' %}" alt="" width="40px"></a></div>
               {%endif%}
               
               {% if not request.user.is_authenticated %}
-
               <a class="nav-item boton" href="{% url 'panel-login' %}">Iniciar sesion <img class="botonimg"src="{% static 'APP/css/pataboton.png' %}" alt="" width="40px"></a>
               {%endif%}
-
+            </div>
               
             </ul>
   
@@ -86,7 +114,6 @@
 
 
 <!-- SCRIPTS LOCAL -->
-
     <footer class="py-3 bg-dark ">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
