--- a/APP_PANEL/templates/APP_PANEL/adoption.html
+++ b/APP_PANEL/templates/APP_PANEL/adoption.html
@@ -27,10 +27,10 @@
   
 </div>
 {%endif%}
-<div class="publicaciones container">
+<div class="grid-container container">
   
 {% for listing in listing_filter.qs %}
-    <div class="contenedorPublicaciones" id="animales">
+    <div class="grid-item" id="animales">
         <div class="imgPublicacion">{{listing.content_upload | safe}}</div>
       <h2 class="fw-normal text-center">{{listing.title}}</h2>
       <div class="texto text-center">
@@ -38,8 +38,8 @@
     </div>
     <div class="botonDetalles text-center"><p><a class="btn btn-secondary" href="{%url 'article-detail' listing.id%}">Ver detalles »</a></p></div>
     {% if request.user.is_authenticated%}
-    <a class="btn btn-secondary" href="{%url 'article-delete' listing.id%}">Eliminar»</a>
-    <a class="btn btn-secondary" href="{%url 'article-update' listing.id%}">Editar»</a>
+    <a class="btn btn-secondary" href="{%url 'article-delete' listing.id%}">Eliminar» <img src="{%static 'APP/css/eliminar.png'%}" alt="" srcset="" width="20px"></a>
+    <a class="btn btn-secondary" href="{%url 'article-update' listing.id%}">Editar»<img src="{%static 'APP/css/editar.png'%}" alt="" srcset="" width="25px"></a>
     {%endif%}
     </div>
 {% endfor %}
