--- a/APP/templates/APP/Contactenos.html
+++ b/APP/templates/APP/Contactenos.html
@@ -1,4 +1,24 @@
 {% extends "APP/padre.html" %}
 {% block Contenido %}
+<div class="container botonsend">
+  <hr>
+    <h1>Ayuda Animal</h1>
+  
+    <h3>
+      Somos un grupo de vecinas de Ciudad Evita que nos organizamos para dar socorro a los animales que se encuentran en situación de calle.
+      Esta organizacion es sin fines de lucro, todo lo recibido es para los animales rescatados.
+      
+      Cada animal rescatado sera dado en adopcion bajo los parametros que la organizacion crea pertinente.
 
-  {% endblock %}
+      ¿Nos das una pata 🐾?
+    </h3>
+    
+    <p>Este sitio web ha sido donado por Rodrigo Maciel (Frontend) y Leandro Jamardo (Backend).</p>
+    
+    
+    
+  
+
+  <hr>
+</div>
+0  {% endblock %}
