--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -116,21 +116,20 @@
 <!-- SCRIPTS LOCAL -->
     <footer class="py-3 bg-dark ">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+        <li class="nav-item"><a href="{%url 'raiz'%}" class="nav-link px-2 text-muted">Inicio</a></li>
+        <li class="nav-item"><a href="{%url 'adopcion'%}" class="nav-link px-2 text-muted">Adopcion</a></li>
+        <li class="nav-item"><a href="{%url 'donaciones'%}" class="nav-link px-2 text-muted">Donaciones</a></li>
+        <li class="nav-item"><a href="{%url 'contactenos'%}" class="nav-link px-2 text-muted">Contactenos</a></li>
       </ul>
       
     <div class="ultimo">
         <div class="compania">
-            <p class="company text-muted">© 2022 Company, Inc</p>
+            <p class="company text-muted">© 2022 Ayuda Animal</p>
         </div>
         <div class="miimagen">
-            <a href=""><img class="" src="{% static 'APP/css/twitter.png' %}" alt="" ></a>
-            <a href=""><img class="" src="{% static 'APP/css/inst.png' %}" alt="" ></a>
-            <a href=""><img class="" src="{% static 'APP/css/face.png' %}" alt="" ></a>
+            <a href="" target="_blank"><img class="" src="{% static 'APP/css/twitter.png' %}" alt="" ></a>
+            <a href="https://www.instagram.com/ayuda_animal.ok/" target="_blank"><img class="" src="{% static 'APP/css/inst.png' %}" alt="" ></a>
+            <a href="https://www.facebook.com/Ayuda_animalok-105794385347786" target="_blank"><img class="" src="{% static 'APP/css/face.png' %}" alt="" ></a>
         </div>
     </div>
     </footer>
