--- a/APP_PANEL/templates/APP_PANEL/article_detail.html
+++ b/APP_PANEL/templates/APP_PANEL/article_detail.html
@@ -21,5 +21,36 @@
     </div>
   </main>
 
+  <div id="carouselExample" class="carousel slide container" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExample" data-slide-to="1"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="gatillo" id="gatillo">
+          <div class="adoptalos" id="adoptalos">
+          <H1 class="h1flotante">ADOPTALOS, ELLOS TE NECESITAN</H1>
+          <a href="{%url 'adopcion'%}"><input class="boton5" type="button" value="Adoptar>>"></a>
+        </div>
+      </div>
+          <div class="vacio">
+            <img class="imagenCarousel" src="{% static 'APP/css/perro3.jpg' %}" alt="" class="d-block w-100 imagenes" height="700" >
+          </div>
+        </div> 
+        <div class="carousel-item">
+            <img  src="{% static 'APP/css/perro2.jpg' %}" alt="" class="d-block w-100 imagenes">
+        </div> 
+    </div>
+    <a href="#carouselExample" class="carousel-control-prev" rol="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"></span>
+    </a>
+    <a href="#carouselExample" class="carousel-control-next" rol="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"></span>
+    </a>
+</div>
+
 
 {% endblock %}
