--- a/APP/templates/APP/articulo_form.html
+++ b/APP/templates/APP/articulo_form.html
@@ -9,7 +9,7 @@
     <form class="loginform" method="POST">
       <h1>Editar articulo</h1>
         {% csrf_token%}
-        {{form.as_p}}
+        {{form.as_ul}}
         <input class="btn btn-primary" type="submit" value="Enviar">
     </form>
   </div>
