--- a/APP_PANEL/templates/APP_PANEL/adoption.html
+++ b/APP_PANEL/templates/APP_PANEL/adoption.html
@@ -31,11 +31,8 @@
   
 {% for listing in listing_filter.qs %}
     <div class="grid-item" id="animales">
-        <div class="imgPublicacion">{{listing.content_upload | safe}}</div>
+        <div class="imgPublicacion"><img  class ="bd-placeholder-img rounded-circle" src="/media/{{listing.image}}" alt="" srcset="" width="140px" height="140px"></div>
       <h2 class="fw-normal text-center">{{listing.title}}</h2>
-      <div class="texto text-center">
-      <p class="">{{listing.content | safe}}</p>
-    </div>
     <div class="botonDetalles text-center"><p><a class="btn btn-secondary" href="{%url 'article-detail' listing.id%}">Ver detalles »</a></p></div>
     {% if request.user.is_authenticated%}
     <a class="btn btn-danger" href="{%url 'article-delete' listing.id%}">Eliminar» <img src="{%static 'APP/css/eliminar.png'%}" alt="" srcset="" width="20px"></a>
