--- a/APP_PANEL/templates/APP_PANEL/article_detail.html
+++ b/APP_PANEL/templates/APP_PANEL/article_detail.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% block Contenido %}
 
-<section class="py-5 text-center container">
+<!-- <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">{{articulo.title}}</h1>
-        <div class="imgPublicacion">{{articulo.content_upload | safe}}</div>
+       
        
       </div>
     </div>
@@ -19,7 +19,7 @@
        {{articulo.content | safe }}
       </div>
     </div>
-  </main>
+  </main> -->
 
   <div id="carouselExample" class="carousel slide container" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -28,15 +28,9 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="gatillo" id="gatillo">
-          <div class="adoptalos" id="adoptalos">
-          <H1 class="h1flotante">ADOPTALOS, ELLOS TE NECESITAN</H1>
-          <a href="{%url 'adopcion'%}"><input class="boton5" type="button" value="Adoptar>>"></a>
-        </div>
-      </div>
-          <div class="vacio">
-            <img class="imagenCarousel" src="{% static 'APP/css/perro3.jpg' %}" alt="" class="d-block w-100 imagenes" height="700" >
-          </div>
+          
+          <img  src="/media/{{articulo.image}}" alt="" class="d-block w-100 imagenes">
+          
         </div> 
         <div class="carousel-item">
             <img  src="{% static 'APP/css/perro2.jpg' %}" alt="" class="d-block w-100 imagenes">
@@ -50,6 +44,8 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden"></span>
     </a>
+    <h3 class="text-center mt-3">{{articulo.title}}</h3>
+    <p>aopsdjapiojdoaisjdaopisdjoasidjoisajdoias</p>
 </div>
 
 
