--- a/APP/templates/APP/Donaciones.html
+++ b/APP/templates/APP/Donaciones.html
@@ -2,7 +2,7 @@
 {% block Contenido %}
 {% load static %}
 
-<div class="container botonsend">
+<div class="container botonsend pb-3">
     <hr>
     <h1>Donaciones</h1>
     <h3>Sumate! Tu colaboracion es de vital importancia para solventar cualquier contratiempo que surja</h3>
