--- a/APP/templates/APP/index.html
+++ b/APP/templates/APP/index.html
@@ -32,7 +32,7 @@
         </a>
     </div>
         <!-- CIRCULOS A PARTIR DE ACA -->
-        <div class="container marketing py-4">
+        <div class="container pt-4">
 
             <!-- Three columns of text below the carousel -->
             <div class="row" id="row">
