--- a/APP_PANEL/templates/APP_PANEL/article_detail.html
+++ b/APP_PANEL/templates/APP_PANEL/article_detail.html
@@ -21,7 +21,7 @@
     </div>
   </main> -->
 
-  <div id="carouselExample" class="carousel slide container" data-ride="carousel">
+  <div id="carouselExample" class="carousel slide container carouselDog" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExample" data-slide-to="1"></li>
@@ -44,8 +44,10 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden"></span>
     </a>
-    <h3 class="text-center mt-3">{{articulo.title}}</h3>
-    <p>aopsdjapiojdoaisjdaopisdjoasidjoisajdoias</p>
+    <h3 class="text-center mt-3 h3detail">{{articulo.title}}</h3>
+    <div class="textoDetail">
+    {{articulo.content | safe}}
+  </div>
 </div>
 
 
