Agregue comentarios, imagenes

--- a/APP/templates/APP/articulo_confirm_delete.html
+++ b/APP/templates/APP/articulo_confirm_delete.html
@@ -9,7 +9,45 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Document</title>
 </head>
-<body>
+<body class="hidden">
+  <div class="loader">
+    <div class="dog">
+       <div class="dog-body">
+          <div class="dog-tail">
+             <div class="dog-tail">
+                <div class="dog-tail">
+                   <div class="dog-tail">
+                      <div class="dog-tail">
+                         <div class="dog-tail">
+                            <div class="dog-tail">
+                               <div class="dog-tail"></div>
+                            </div>
+                         </div>
+                      </div>
+                   </div>
+                </div>
+             </div>
+          </div>
+       </div>
+       <div class="dog-torso"></div>
+       <div class="dog-head">
+          <div class="dog-ears">
+             <div class="dog-ear"></div>
+             <div class="dog-ear"></div>
+          </div>
+          <div class="dog-eyes">
+             <div class="dog-eye"></div>
+             <div class="dog-eye"></div>
+          </div>
+          <div class="dog-muzzle">
+             <div class="dog-tongue"></div>
+          </div>
+       </div>
+    </div>
+    <div class="texto">
+    <p class="pcontenedor">Cargando...</p>
+  </div>
+  </div>
   <div class="deleteDog">
     <div class="formularioDog">
       <table>
@@ -35,7 +73,7 @@
       </table>
     </div>
   </div>
-  <script src=""></script>
+  <script src="{%static 'APP/js/codigo.js'%}"></script>
 </body>
 </html>
 
