--- a/APP/templates/APP/index.html
+++ b/APP/templates/APP/index.html
@@ -19,7 +19,7 @@
               </div>
             </div> 
             <div class="carousel-item">
-                <img  src="{% static 'APP/css/perro2.jpg' %}" alt="" class="d-block w-100 imagenes">
+                <img  src="{% static 'APP/css/perro2.jpg' %}" alt="" class="d-block w-100   ">
             </div> 
         </div>
         <a href="#carouselExample" class="carousel-control-prev" rol="button" data-slide="prev">
