alctualizacion de imagenes e index

--- a/APP/templates/APP/Contactenos.html
+++ b/APP/templates/APP/Contactenos.html
@@ -7,13 +7,15 @@
     <h3>
       Somos un grupo de vecinas de Ciudad Evita que nos organizamos para dar socorro a los animales que se encuentran en situación de calle.
       Esta organizacion es sin fines de lucro, todo lo recibido es para los animales rescatados.
-      
+      A futuro se buscara que la organizacion pase a ser una ONG, pero al no tener un edificio fisico donde a situarla no es posible.
+      Como no tenemos un lugar fisico donde alvergar a los animales rescatados nos manejamos con transitos, que son ofrecidos por volutad propia.
       Cada animal rescatado sera dado en adopcion bajo los parametros que la organizacion crea pertinente.
+
 
       ¿Nos das una pata 🐾?
     </h3>
     
-    <p>Este sitio web ha sido donado por Rodrigo Maciel (Frontend) y Leandro Jamardo (Backend).</p>
+    <p>Este sitio web ha sido donado por Rodrigo Maciel y Leandro Jamardo.</p>
     
     
     
