--- a/APP/templates/APP/index.html
+++ b/APP/templates/APP/index.html
@@ -37,45 +37,45 @@
             <!-- Three columns of text below the carousel -->
             <div class="row" id="row">
               <div class="col-lg-4 circulos perro">
-                <img class="bd-placeholder-img rounded-circle perro1" src="{% static 'APP/css/perro.jpg' %}" alt="" width="140px" height="140px">      
+                <img class="bd-placeholder-img rounded-circle perro1" src="{% static 'APP/css/pedrito.jpg' %}" alt="" width="140px" height="140px">      
                 <h2 class="fw-normal">Donaciones</h2>
                 <p>Hacelo por ellos! Cualquier cosa q te sobre les sirve. Desde correas y collares usados, hasta juguetes. No dudes en comunicarte con nosotros</p>
-                <p><a class="btn btn-secondary" href="#">Ver detalles »</a></p>
+                
               </div><!-- /.col-lg-4 -->
               
               <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro2" src="{% static 'APP/css/perro2.jpg' %}" alt="" width="140px" height="140px">        
+                <img class="bd-placeholder-img rounded-circle perro2" src="{% static 'APP/css/brauni.jpg' %}" alt="" width="140px" height="140px">        
                 <h2 class="fw-normal">Para adoptar...</h2>
                 <p>Cuando adoptamos hay que tomar la responsabilidad de comprarle collar y chapita(por cualquier imprevisto), y castrar al animal (para cortar con la reprodiccion indiscriminada de animales callejeros).</p>
-                <p><a class="btn btn-secondary" href="#">Ver detalles »</a></p>
+                
               </div><!-- /.col-lg-4 -->
               
               <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/perro3.jpg' %}" alt="" width="140px" height="140px">          
+                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/ayudaanimal.png' %}" alt="" width="140px" height="140px">          
                 <h2 class="fw-normal">Sorteos por ellos</h2>
                 <p>A veces recibimos donaciones para ser sorteadas y conseguir fondos para seguir ayudando. Por eso esten atentos a las redes donde indicaremos la fecha del sorteo y como participar. </p>
-                <p><a class="btn btn-secondary" href="#">Ver detalles »</a></p>
+                
               </div><!-- /.col-lg-4 -->
               
               <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/perro3.jpg' %}" alt="" width="140px" height="140px">          
+                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/clarens.jpg' %}" alt="" width="140px" height="140px">          
                 <h2 class="fw-normal">Instragram, Facebook y Tik Tok</h2>
                 <p>Siganos en nuestras redes, donde pasamos las novedades de los rescatados, partes medicos y los adoptados.  </p>
-                <p><a class="btn btn-secondary" href="#">Ver detalles »</a></p>
+                
               </div><!-- /.col-lg-4 -->
               
               <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/perro3.jpg' %}" alt="" width="140px" height="140px">          
+                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/ayudaanimalparque.jpg' %}" alt="" width="140px" height="140px">          
                 <h2 class="fw-normal">Tardes en el parque</h2>
                 <p>Cuando disponemos de tiempo y los dias acompañan, organizamos unas hermosas juntadas con ellos y ustedes en las plazas de Ciudad Evita. A prestar atencion en las redes donde vasmoa publicar las fechas y horarios. ¡Los esperamos!</p>
-                <p><a class="btn btn-secondary" href="#">Ver detalles »</a></p>
+                
               </div><!-- /.col-lg-4 -->
               
               <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/perro3.jpg' %}" alt="" width="140px" height="140px">          
+                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/rubioYroma.jpg' %}" alt="" width="140px" height="140px">          
                 <h2 class="fw-normal">Historias felices</h2>
-                <p>Ya alcanzamos las 80 adopciones, en nuestro Instagram pueden visualizar algunas de estas hermosas historias en Destacadas!</p>
-                <p><a class="btn btn-secondary" href="#">Ver detalles »</a></p>
+                <p>Ya alcanzamos las 60 adopciones, en nuestro Instagram pueden visualizar algunas de estas hermosas historias en Destacadas!</p>
+                
               </div><!-- /.col-lg-4 -->
 
 
