correccion de errores

--- a/APP/templates/APP/index.html
+++ b/APP/templates/APP/index.html
@@ -58,21 +58,20 @@
               </div><!-- /.col-lg-4 -->
               
               <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/perro3.jpg' %}" alt="" width="140px" height="140px">          
+                <img class="bd-placeholder-img rounded-circle perro4" src="{% static 'APP/css/clarens.jpg' %}" alt="" width="140px" height="140px">          
                 <h2 class="fw-normal">Instragram, Facebook y Tik Tok</h2>
                 <p>Siganos en nuestras redes, donde pasamos las novedades de los rescatados, partes medicos y los adoptados.  </p>
                 
               </div><!-- /.col-lg-4 -->
               
               <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/perro3.jpg' %}" alt="" width="140px" height="140px">          
+                <img class="bd-placeholder-img rounded-circle perro5" src="{% static 'APP/css/ayudaanimalparque.jpg' %}" alt="" width="140px" height="140px">          
                 <h2 class="fw-normal">Tardes en el parque</h2>
                 <p>Cuando disponemos de tiempo y los dias acompañan, organizamos unas hermosas juntadas con ellos y ustedes en las plazas de Ciudad Evita. A prestar atencion en las redes donde vasmoa publicar las fechas y horarios. ¡Los esperamos!</p>
                 
               </div><!-- /.col-lg-4 -->
-              
               <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/perro3.jpg' %}" alt="" width="140px" height="140px">          
+                <img class="bd-placeholder-img rounded-circle perro6" src="{% static 'APP/css/rubioYroma.jpg' %}" alt="" width="140px" height="140px">          
                 <h2 class="fw-normal">Historias felices</h2>
                 <p>Ya alcanzamos las 60 adopciones, en nuestro Instagram pueden visualizar algunas de estas hermosas historias en Destacadas!</p>
                 
